# calibrationtool

./: .gitignore  CMakeLists.txt  README  README.md  main.cpp  uimain.cpp  uimain.h  uimain.ui  userstrings.cpp  userstrings.h
src/: algocamerapose.cpp  algocamerapose.h  camera.cpp  camera.h  camerapose.cpp  camerapose.h  helperfunctions.cpp  helperfunctions.h  main.cpp  objplanar.cpp  objplanar.h  testing.cpp  testing.h
src/ui/: imageview.cpp  imageview.h  uimain.cpp  uimain.h  uimain.ui
